[workspace]

members = [
  "common",
  "dmntk",
  "evaluator",
  "examples",
  "feel",
  "feel-grammar",
  "feel-evaluator",
  "feel-number",
  "feel-parser",
  "feel-temporal",
  "gendoc",
  "model",
  "model-evaluator",
  "recognizer",
  "server",
  "workspace"
]

[workspace.package]
version = "0.1.1"
authors = ["Dariusz Depta <dariusz.depta@dmntk.io>"]
license = "MIT OR Apache-2.0"
edition = "2021"

[workspace.dependencies]
#------------------------------------------------------------------------------
actix-web = "4.3.0"
base64 = "0.21.0"
roxmltree = "0.18.0"
serde = { version = "1.0.152" }
serde_derive = "1.0.152"
serde_json = "1.0.92"
uuid = { version = "1.3.0", features = ["v4"] }
uriparse = "0.6.4"
#------------------------------------------------------------------------------
dmntk-common = "0.1.0"
dmntk-evaluator = "0.1.0"
dmntk-examples = "0.1.0"
dmntk-feel = "0.1.0"
dmntk-feel-evaluator = "0.1.0"
dmntk-feel-grammar = "0.1.0"
dmntk-feel-number = "0.1.0"
dmntk-feel-parser = "0.1.0"
dmntk-feel-temporal = "0.1.0"
dmntk-gendoc = "0.1.0"
dmntk-model = "0.1.0"
dmntk-model-evaluator = "0.1.0"
dmntk-recognizer = "0.1.0"
dmntk-server = "0.1.0"
dmntk-workspace = "0.1.0"
#------------------------------------------------------------------------------