[workspace]

members = [
  "common",
  "dmntk",
  "evaluator",
  "examples",
  "feel",
  "feel-grammar",
  "feel-evaluator",
  "feel-number",
  "feel-parser",
  "feel-temporal",
  "gendoc",
  "model",
  "model-evaluator",
  "recognizer",
  "server",
  "workspace"
]

[workspace.package]
version = "0.1.2"
authors = ["Dariusz Depta <dariusz.depta@dmntk.io>"]
license = "MIT OR Apache-2.0"
edition = "2021"

[workspace.dependencies]
actix-web = "4.3.1"
ascii_tree = "0.1.1"
base64 = "0.21.0"
chrono = "0.4.24"
chrono-tz = "0.8.2"
convert_case = "0.6.0"
clap = { version = "4.2.7", features = ["cargo"] }
dfp-number-sys = "0.0.13"
difference = "2.0.0"
domrs = "0.0.5"
markdown = "1.0.0-alpha.9"
once_cell = "1.17.1"
regex = "1.8.1"
roxmltree = "0.18.0"
serde = { version = "1.0.163", features = ["derive"] }
serde_json = "1.0.96"
uuid = { version = "1.3.2", features = ["v4"] }
uriparse = "0.6.4"
walkdir = "2.3.3"
dmntk-common = "0.1.2"
dmntk-evaluator = "0.1.2"
dmntk-examples = "0.1.2"
dmntk-feel = "0.1.2"
dmntk-feel-evaluator = "0.1.2"
dmntk-feel-grammar = "0.1.2"
dmntk-feel-number = "0.1.2"
dmntk-feel-parser = "0.1.2"
dmntk-feel-temporal = "0.1.2"
dmntk-gendoc = "0.1.2"
dmntk-model = "0.1.2"
dmntk-model-evaluator = "0.1.2"
dmntk-recognizer = "0.1.2"
dmntk-server = "0.1.2"
dmntk-workspace = "0.1.2"