[workspace]

members = [
    "common",
    "dmntk",
    "evaluator",
    "examples",
    "feel",
    "feel-grammar",
    "feel-evaluator",
    "feel-number",
    "feel-parser",
    "feel-temporal",
    "gendoc",
    "model",
    "model-evaluator",
    "recognizer",
    "server",
    "workspace"
]

[workspace.package]
version = "0.2.0-dev"
authors = ["Dariusz Depta <dariusz.depta@dmntk.io>"]
license = "MIT OR Apache-2.0"
edition = "2021"

[workspace.dependencies]
actix-web = "4.3.1"
ascii_tree = "0.1.1"
base64 = "0.21.0"
chrono = "0.4.24"
chrono-tz = "0.8.2"
convert_case = "0.6.0"
clap = { version = "4.2.7", features = ["cargo"] }
dfp-number-sys = "0.0.13"
difference = "2.0.0"
domrs = "0.0.5"
markdown = "1.0.0-alpha.9"
once_cell = "1.17.1"
regex = "1.8.1"
roxmltree = "0.18.0"
serde = { version = "1.0.163", features = ["derive"] }
serde_json = "1.0.96"
uuid = { version = "1.3.2", features = ["v4"] }
uriparse = "0.6.4"
walkdir = "2.3.3"
dmntk-common = { path = "common" }
dmntk-evaluator = { path = "evaluator" }
dmntk-examples = { path = "examples" }
dmntk-feel = { path = "feel" }
dmntk-feel-evaluator = { path = "feel-evaluator" }
dmntk-feel-grammar = { path = "feel-grammar" }
dmntk-feel-number = { path = "feel-number" }
dmntk-feel-parser = { path = "feel-parser" }
dmntk-feel-temporal = { path = "feel-temporal" }
dmntk-gendoc = { path = "gendoc" }
dmntk-model = { path = "model" }
dmntk-model-evaluator = { path = "model-evaluator" }
dmntk-recognizer = { path = "recognizer" }
dmntk-server = { path = "server" }
dmntk-workspace = { path = "workspace" }