[package]
name = "dmntk-common"
version = "0.0.47-dev"
authors = ["Dariusz Depta <dariusz.depta@dmntk.io>"]
description = "DMNTK | Common definitions"
documentation = "https://docs.rs/dmntk-common"
repository = "https://github.com/dmntk/dmntk.rs.git"
license = "MIT OR Apache-2.0"
edition = "2021"

[dependencies]
serde = { version = "1.0.139", features = ["derive"] }
serde_yaml = "0.8.26"
uriparse = "0.6.4"