[package]
name = "dmntk-common"
version.workspace = true
authors.workspace = true
description = "DMNTK | Common definitions"
documentation = "https://docs.rs/dmntk-common"
repository = "https://github.com/dmntk/dmntk.rs.git"
license.workspace = true
edition.workspace = true

[dependencies]
serde = "1.0.130"
serde_derive = "1.0.130"
serde_yaml = "0.9.14"
uriparse = "0.6.3"