[package]
name = "dmntk-common"
version.workspace = true
authors.workspace = true
description = "DMNTK | Common definitions"
documentation = "https://docs.rs/dmntk-common"
repository = "https://github.com/dmntk/dmntk.rs.git"
license.workspace = true
edition.workspace = true

[dependencies]
serde.workspace = true
serde_derive.workspace = true
serde_yaml.workspace = true
uriparse = "0.6.3"