[package]
name = "dmntk"
version = "0.0.47-dev"
authors = ["Dariusz Depta <dariusz.depta@dmntk.io>"]
description = "DMNTK | Decision Model and Notation Toolkit"
documentation = "https://docs.rs/dmntk"
repository = "https://github.com/dmntk/dmntk.rs.git"
license = "MIT OR Apache-2.0"
edition = "2021"

[features]
default = []
tck = []

[dependencies]
actix-web = "4.1.0"
base64 = "0.13.0"
clap = { version = "3.2.12", features = ["cargo"] }
difference = "2.0.0"
dmntk-common.workspace = true
dmntk-evaluator = { path = "../evaluator" }
dmntk-feel = { path = "../feel" }
dmntk-feel-parser = { path = "../feel-parser" }
dmntk-gendoc = { path = "../gendoc" }
dmntk-model = { path = "../model" }
dmntk-recognizer = { path = "../recognizer" }
dmntk-server = { path = "../server" }
dmntk-workspace = { path = "../workspace" }
serde = { version = "1.0.140", features = ["derive"] }
serde_yaml = "0.8.26"
thiserror = "1.0.30"