[package]
name = "dmntk-evaluator"
version.workspace = true
authors.workspace = true
description = "DMNTK | FEEL and DMN model evaluator"
documentation = "https://docs.rs/dmntk-evaluator"
repository = "https://github.com/dmntk/dmntk.rs.git"
license.workspace = true
edition.workspace = true

[dependencies]
dmntk-common = "0.0.46"
dmntk-feel = "0.0.46"
dmntk-feel-evaluator = "0.0.46"
dmntk-feel-parser = "0.0.46"
dmntk-model-evaluator = "0.0.46"