[package]
name = "dmntk-feel-evaluator"
version.workspace = true
authors.workspace = true
description = "DMNTK | FEEL evaluator"
documentation = "https://docs.rs/dmntk-feel-evaluator"
repository = "https://github.com/dmntk/dmntk.rs.git"
license = "MIT OR Apache-2.0"
edition.workspace = true

[dependencies]
dmntk-common = "0.0.46"
dmntk-feel = "0.0.46"
dmntk-feel-parser = "0.0.46"
lazy_static = "1.4.0"
regex = "1.5.4"
thiserror = "1.0.30"