[package]
name = "dmntk-feel-evaluator"
version.workspace = true
authors.workspace = true
description = "DMNTK | FEEL evaluator"
documentation = "https://docs.rs/dmntk-feel-evaluator"
repository = "https://github.com/dmntk/dmntk.rs.git"
license.workspace = true
edition.workspace = true

[dependencies]
lazy_static = "1.4.0"
regex = "1.5.4"
dmntk-common.workspace = true
dmntk-feel.workspace = true
dmntk-feel-parser.workspace = true
dmntk-feel-temporal.workspace = true
