[package]
name = "dmntk-feel-grammar"
version.workspace = true
authors.workspace = true
description = "DMNTK | FEEL grammar"
documentation = "https://docs.rs/dmntk-feel-grammar"
repository = "https://github.com/dmntk/dmntk.rs.git"
license = "MIT OR Apache-2.0"
edition.workspace = true

[dependencies]
convert_case = "0.6.0"
regex = "1.7.0"