[package]
name = "dmntk-feel-number"
version.workspace = true
authors.workspace = true
description = "DMNTK | FEEL number"
documentation = "https://docs.rs/dmntk-feel-number"
repository = "https://github.com/dmntk/dmntk.rs.git"
license.workspace = true
edition.workspace = true

[dependencies]
dmntk-common = "0.0.46"
libc = "0.2.112"
lazy_static = "1.4.0"

[build-dependencies]
cc = "1.0.72"
