[package]
name = "dmntk-feel-number"
version.workspace = true
authors.workspace = true
description = "DMNTK | FEEL number"
documentation = "https://docs.rs/dmntk-feel-number"
repository = "https://github.com/dmntk/dmntk.rs.git"
license.workspace = true
edition.workspace = true

[features]
dec-number = ["dec-number-sys"]
dfp-number = ["dfp-number-sys"]

[dependencies]
dmntk-common.workspace = true
dec-number-sys = { version = "0.0.25", optional = true }
dfp-number-sys = { version = "0.0.11", optional = true }
