[package]
name = "dmntk-feel-parser"
version.workspace = true
authors.workspace = true
description = "DMNTK | FEEL parser"
documentation = "https://docs.rs/dmntk-feel-parser"
repository = "https://github.com/dmntk/dmntk.rs.git"
license.workspace = true
edition.workspace = true

[features]
parsing-tables = []

[dependencies]
dmntk-common.workspace = true
dmntk-feel.workspace = true

[dev-dependencies]
difference = "2.0.0"

[build-dependencies]
dmntk-feel-grammar.workspace = true