[package]
name = "dmntk-feel-temporal"
version.workspace = true
authors.workspace = true
description = "DMNTK | FEEL temporal"
documentation = "https://docs.rs/dmntk-feel-temporal"
repository = "https://github.com/dmntk/dmntk.rs.git"
license.workspace = true
edition.workspace = true

[dependencies]
chrono = "0.4.23"
chrono-tz = "0.8.0"
lazy_static = "1.4.0"
regex = "1.7.0"
dmntk-common.workspace = true
dmntk-feel-number.workspace = true
