[package]
name = "dmntk-feel"
version.workspace = true
authors.workspace = true
description = "DMNTK | FEEL definitions"
documentation = "https://docs.rs/dmntk-feel"
repository = "https://github.com/dmntk/dmntk.rs.git"
license.workspace = true
edition.workspace = true

[dependencies]
ascii_tree = "0.1.1"
chrono = "0.4.23"
chrono-tz = "0.8.0"
dmntk-common.workspace = true
dmntk-feel-number.workspace = true
lazy_static = "1.4.0"
regex = "1.7.0"