[package]
name = "dmntk-gendoc"
version.workspace = true
authors.workspace = true
description = "DMNTK | Documentation generator"
documentation = "https://docs.rs/dmntk-model"
repository = "https://github.com/dmntk/dmntk.rs.git"
license.workspace = true
edition.workspace = true

[dependencies]
dmntk-examples = "0.0.46"
dmntk-model = "0.0.46"