[package]
name = "dmntk-model-evaluator"
version.workspace = true
authors.workspace = true
description = "DMNTK | DMN model evaluator"
documentation = "https://docs.rs/dmntk-evaluator"
repository = "https://github.com/dmntk/dmntk.rs.git"
license.workspace = true
edition.workspace = true

[dependencies]
dmntk-common = "0.0.46"
dmntk-feel = "0.0.46"
dmntk-feel-evaluator = "0.0.46"
dmntk-feel-parser = "0.0.46"
dmntk-model = "0.0.46"
thiserror = "1.0.30"

[dev-dependencies]
dmntk-examples = "0.0.46"
dmntk-recognizer = "0.0.46"
lazy_static = "1.4.0"