[package]
name = "dmntk-model"
version.workspace = true
authors.workspace = true
description = "DMNTK | DMN model and parser"
documentation = "https://docs.rs/dmntk-model"
repository = "https://github.com/dmntk/dmntk.rs.git"
license.workspace = true
edition.workspace = true

[dependencies]
dmntk-common = "0.0.46"
dmntk-examples = "0.0.46"
dmntk-feel = "0.0.46"
dmntk-feel-parser = "0.0.46"
roxmltree = "0.14.1"