[package]
name = "dmntk-recognizer"
version.workspace = true
authors.workspace = true
description = "DMNTK | Decision table recognizer"
documentation = "https://docs.rs/dmntk-recognizer"
repository = "https://github.com/dmntk/dmntk.rs.git"
license = "MIT OR Apache-2.0"
edition = "2021"

[dependencies]
dmntk-common = "0.0.46"
dmntk-model = "0.0.46"