[package]
name = "dmntk-recognizer"
version.workspace = true
authors.workspace = true
description = "DMNTK | Decision table recognizer"
documentation = "https://docs.rs/dmntk-recognizer"
repository = "https://github.com/dmntk/dmntk.rs.git"
license.workspace = true
edition.workspace = true

[dependencies]
dmntk-common.workspace = true
dmntk-model.workspace = true