[package]
name = "dmntk-server"
version.workspace = true
authors.workspace = true
description = "DMNTK | API server"
documentation = "https://docs.rs/dmntk-server"
repository = "https://github.com/dmntk/dmntk.rs.git"
license.workspace = true
edition.workspace = true

[dependencies]
actix-web = "3.3.2"
base64 = "0.13.0"
dmntk-common = "0.0.46"
dmntk-evaluator = "0.0.46"
dmntk-feel = "0.0.46"
dmntk-feel-parser = "0.0.46"
dmntk-model = "0.0.46"
dmntk-workspace = "0.0.46"
serde = "1.0.130"
serde_derive = "1.0.130"
serde_json = "1.0.73"
thiserror = "1.0.30"