[package]
name = "dmntk-workspace"
version.workspace = true
authors.workspace = true
description = "DMNTK | Workspace"
documentation = "https://docs.rs/dmntk-workspace"
repository = "https://github.com/dmntk/dmntk.rs.git"
license.workspace = true
edition.workspace = true

[dependencies]
dmntk-common = "0.0.46"
dmntk-feel = "0.0.46"
dmntk-feel-evaluator = "0.0.46"
dmntk-model = "0.0.46"
dmntk-model-evaluator = "0.0.46"
thiserror = "1.0.30"
walkdir = "2.3.2"

[dev-dependencies]
dmntk-examples = { path = "../examples" }