[package]
name = "dmntk-workspace"
version.workspace = true
authors.workspace = true
description = "DMNTK | Workspace"
documentation = "https://docs.rs/dmntk-workspace"
repository = "https://github.com/dmntk/dmntk.rs.git"
license.workspace = true
edition.workspace = true

[dependencies]
dmntk-common.workspace = true
dmntk-feel.workspace = true
dmntk-feel-evaluator.workspace = true
dmntk-model.workspace = true
dmntk-model-evaluator.workspace = true
thiserror = "1.0.30"
walkdir = "2.3.2"

[dev-dependencies]
dmntk-examples.workspace = true